--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.2.6",
+    "@types/react-redux": "7.1.33",
+    "axios": "^1.7.2",
+    "dayjs": "1.11.12",
     "react": "^18.2.0",
+    "react-big-calendar": "1.13.1",
     "react-dom": "^18.2.0",
+    "react-redux": "9.1.2",
     "react-router-dom": "6.24.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
