--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-big-calendar": "1.13.1",
     "react-dom": "^18.2.0",
     "react-redux": "9.1.2",
-    "react-router-dom": "6.24.0"
+    "react-router-dom": "6.24.0",
+    "sweetalert2": "11.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "8.4.39",
     "tailwindcss": "3.4.4",
+    "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
