--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "email": "email dev"
   },
   "dependencies": {
+    "@emailjs/browser": "4.4.1",
     "@reduxjs/toolkit": "2.2.6",
     "@types/react-redux": "7.1.33",
     "axios": "^1.7.2",
