--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "email": "email dev"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emailjs/browser": "4.4.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@reduxjs/toolkit": "2.2.6",
     "@types/react-redux": "7.1.33",
     "axios": "^1.7.2",
-    "dayjs": "1.11.12",
     "react": "^18.2.0",
-    "react-big-calendar": "1.13.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-redux": "9.1.2",
     "react-router-dom": "6.24.0",
@@ -25,7 +31,6 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
-    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
