--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "9.1.2",
     "react-router-dom": "6.24.0",
-    "sonner": "^1.5.0",
-    "sweetalert2": "11.12.3"
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
